--- a/index.html
+++ b/index.html
@@ -12,32 +12,190 @@
   <script src="https://kit.fontawesome.com/3848942bcd.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
-  <div class="page">
-    <header>
-      <div class="mylinks">
-        <ul class="link-menu">
-          <li class="link-item"><a ><i class="fa-brands fa-facebook-f"></i></a></li>
-          <li class="link-item"><a ><i class="fa-brands fa-twitter"></i></a></li>
-          <li class="link-item"><a >English</a></li>
-          <li class="link-item"><a >My Page</a></li>
-          <li class="link-item"><a >Logout</a></li>
+
+<body>  
+  <header>
+    <div class="mylinks">
+      <ul class="link-menu">
+        <li class="link-item"><a ><i class="fa-brands fa-facebook-f"></i></a></li>
+        <li class="link-item"><a ><i class="fa-brands fa-twitter"></i></a></li>
+        <li class="link-item"><a >English</a></li>
+        <li class="link-item"><a >My Page</a></li>
+        <li class="link-item"><a >Logout</a></li>
+      </ul>
+    </div>
+    <div class="menu-cont">
+      <i class="fa-sharp fa-solid fa-bars"></i>
+      <a href="/index.html"><img src="images/logo.png" alt="Logo Concert Music Catholic" class="logo"></a>
+      <nav class="nav-menu">
+        <ul class="menu-dk">
+          <li><a class="menu-link" href="#">About</a></li>
+          <li><a class="menu-link" href="#">Program</a></li>
+          <li><a class="menu-link" href="#">Join</a></li>
+          <li><a class="menu-link" href="#">Sponsor</a></li>
+          <li><a class="menu-link" href="#">News</a></li>
         </ul>
+        <button class="btn-campain"><a href="#">CMC World</a></button>
+      </nav>
+    </div>      
+  </header>  
+  <div class="page">
+    <main>
+      <section class="principal">
+      <div class="tittle">
+        <h2 class="txt-tittle">"United by the same Faith"</h2>
+        <h1 >CATHOLIC MUSIC CONCERT<br>WORLD TOUR July 2023</h1>
+        <p class="description">In july, a series of presentations will be held in Rome, Italy, to praise and give glory to our Lord Jesus Christ, accompanied by the best representatives of catholic music.</p>
+        <div class="date-site">
+          <p class="date">2023.07.20(THU) ~ 22(SAT)</p>
+          <p class="site">@Auditorio Parco della Musica - Roma RM, Italia</p>
+        </div>        
       </div>
-      <div class="menu-cont">
-        <img src="" alt="" class="logo">
-        <nav class="menu"></nav>
-      </div>
-      
-    </header>
+      </section>
+      <section class="main-program">
+        <div class="main-container">
+          <h2>Main Program</h2>
+          <hr class="small-line pos-line">
+          <div class="program">
+            <div class="card-program">
+              <i class="fa-solid fa-icons program-icon"></i>
+              <h3 class="program-item">Musical Material</h3>
+              <p class="program-desc">Discover the material of your favorite singers, representatives of Catholic music around the world.</p>
+            </div>
+            <div class="card-program">
+              <i class="fa-solid fa-compact-disc program-icon"></i>
+              <h3 class="program-item">Discography</h3>
+              <p class="program-desc">Get to know your artists, find out where they perform and receive all the news.</p>
+            </div>
+            <div class="card-program">
+              <i class="fa-solid fa-file-lines program-icon"></i>
+              <h3 class="program-item">Chords</h3>
+              <p class="program-desc">Learn to play and sing to our Lord in the style of your favorite singer.</p>
+            </div>
+            <div class="card-program">
+              <i class="fa-solid fa-microphone-lines program-icon"></i>
+              <h3 class="program-item">Karaoke</h3>
+              <p class="program-desc">Sing with the original tracks of your artists, you can do it too</p>
+            </div>
+            <div class="card-program">
+              <i class="fa-solid fa-camera-retro program-icon"></i>
+              <h3 class="program-item">Meet & Greet</h3>
+              <p class="program-desc">Meet, share, take photos, ask for his autograph and tell him what makes you feel.</p>
+            </div>
 
+          </div>
+            <a href="#" class="whole">SEE THE WHOLE CONCERT</a>          
+            <a class="join-program" href="#">Join to MCM World Tour 2023</a>
+          </div>
+      </section>
+      <section class="featured-singer">
+        <div class="signers-container">
+          <h2 class="singer-tittle">Featured Singers</h2>          
+          <div class="singers-cards">
+            <!-- card 1 -->
+            <!-- <div class="card-singer">
+              <img src="images/sing-celines.png" alt="Photo of the Singer" class="singer">
+              <div class="singer-description">
+                <h3>Celines Diaz</h3>                
+                <p class="fetures"></p>
+                <hr class="small-gray">
+                <p class="singer-experience"></p>
+              </div>
+            </div> -->
+            <!-- card 2 -->
+            <!-- <div class="card-singer">
+              <img src="images/sing-celines.png" alt="Photo of the Singer" class="singer">
+              <div class="singer-description">
+                <h3>Celines Diaz</h3>
+                <p class="fetures">She was born on December 31, in the city of Santo Domingo</p>
+                <hr class="small-gray">
+                <p class="singer-experience">In 2001, she signed a recording contract with BMG US Latin, in the city of Miami, and recorded her first album as a singer-songwriter, entitled "Seliné".</p>
+              </div>
+            </div> -->
+            <!-- card 3 -->
+            <!-- <div class="card-singer">
+              <img src="images/sing-celines.png" alt="Photo of the Singer" class="singer">
+              <div class="singer-description">
+                <h3>Celines Diaz</h3>
+                <p class="fetures">She was born on December 31, in the city of Santo Domingo</p>
+                <hr class="small-gray">
+                <p class="singer-experience">In 2001, she signed a recording contract with BMG US Latin, in the city of Miami, and recorded her first album as a singer-songwriter, entitled "Seliné".</p>
+              </div>
+            </div> -->
+            <!-- card 4 -->
+            <!-- <div class="card-singer">
+              <img src="images/sing-celines.png" alt="Photo of the Singer" class="singer">
+              <div class="singer-description">
+                <h3>Celines Diaz</h3>
+                <p class="fetures">She was born on December 31, in the city of Santo Domingo</p>
+                <hr class="small-gray">
+                <p class="singer-experience">In 2001, she signed a recording contract with BMG US Latin, in the city of Miami, and recorded her first album as a singer-songwriter, entitled "Seliné".</p>
+              </div>
+            </div> -->
+            <!-- card 5 -->
+            <!-- <div class="card-singer">
+              <img src="images/sing-celines.png" alt="Photo of the Singer" class="singer">
+              <div class="singer-description">
+                <h3>Celines Diaz</h3>
+                <p class="fetures">She was born on December 31, in the city of Santo Domingo</p>
+                <hr class="small-gray">
+                <p class="singer-experience">In 2001, she signed a recording contract with BMG US Latin, in the city of Miami, and recorded her first album as a singer-songwriter, entitled "Seliné".</p>
+              </div>
+            </div> -->
+            <!-- card 6 -->
+            <!-- <div class="card-singer">
+              <img src="images/sing-celines.png" alt="Photo of the Singer" class="singer">
+              <div class="singer-description">
+                <h3>Celines Diaz</h3>
+                <p class="fetures">She was born on December 31, in the city of Santo Domingo</p>
+                <hr class="small-gray">
+                <p class="singer-experience">In 2001, she signed a recording contract with BMG US Latin, in the city of Miami, and recorded her first album as a singer-songwriter, entitled "Seliné".</p>
+              </div>
+            </div> -->
+          </div>
+        </div>        
+      </section>      
+    </main>
     <footer>
-      <i class="fa-solid fa-chevron-down"></i>
-    </footer>
+      <div class="partner">
+        <h2>Partner</h2>
+        <hr class="small-line">
+        <div class="logos">
+          <a href="#"><img class="logo-partner" src="images/log-moz.png" alt="Mozilla Logo"></a>
+          <a href="#"><img class="logo-partner" src="images/log-google.png" alt="Google Logo"></a>
+          <a href="#"><img class="logo-partner" src="images/log-naver.png" alt="Naver Logo"></a>
+          <a href="#"><img class="logo-partner" src="images/log-daum.png" alt="Daumkakao Logo"></a>
+          <a href="#"><img class="logo-partner" src="images/log-airbnb.png" alt="Airbnb Logo"></a>          
+        </div>
+      </div>
+      <div class="copyright">
+        <img src="images/logo-sinodo.png" alt="Logo">
+        <div class="cop-desc">
+          <p class="cop-text">2023 - Synod 21-24 - Concert Music Catholic</p>
+          <p class="cop-text">We recall that the purpose of the Synod is not to produce documents, but to plant dreams, draw forth prophecies and visions</p>
+        </div>
+      </div>
+    </footer>    
   </div>
-
-
-
-
+  <!-- menu modal   -->
+  <div id="container-menu-modal">
+    <div id="modal">
+        <div id="menu-head">
+          <i class="fa-solid fa-xmark" id="btn-close"></i>
+            <!-- <img id="btn-close"src="image/btn-x.png" alt="close button"> -->
+        </div>
+        <div>
+            <ul id="modal-ul">
+                <li class="modal-item"><a href="about.html">About</a></li>
+                <li class="modal-item"><a href="#Program">Program</a></li>
+                <li class="modal-item"><a href="#Sponsor">Sponsor</a></li>
+                <li class="modal-item"><a href="#News">News</a></li>                
+            </ul>                
+        </div>
+        <hr class="endline">
+    </div>
+</div>
+<script src="js/menu.js"></script>
+<script src="js/singers.js"></script>
 </body>
 </html>
