--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li><a class="menu-link" href="#">Sponsor</a></li>
           <li><a class="menu-link" href="#">News</a></li>
         </ul>
-        <button class="btn-campain"><a href="#">CMC World</a></button>
+        <button class="btn-campain" type="button"><a href="#">CMC World</a></button>
       </nav>
     </div>      
   </header>  
