--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <a href="/index.html"><img src="images/logo.png" alt="Logo Concert Music Catholic" class="logo"></a>
       <nav class="nav-menu">
         <ul class="menu-dk">
-          <li><a class="menu-link" href="#">About</a></li>
-          <li><a class="menu-link" href="#">Program</a></li>
-          <li><a class="menu-link" href="#">Join</a></li>
-          <li><a class="menu-link" href="#">Sponsor</a></li>
-          <li><a class="menu-link" href="#">News</a></li>
+          <li><a class="menu-link" href="about.html">About</a></li>
+          <li><a class="menu-link" href="#program">Program</a></li>
+          <li><a class="menu-link" href="#join">Join</a></li>
+          <li><a class="menu-link" href="#sponsors">Sponsor</a></li>
+          <li><a class="menu-link" href="#news">News</a></li>
         </ul>
         <button class="btn-campain" type="button"><a href="#">CMC World</a></button>
       </nav>
