--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/3848942bcd.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>  
@@ -26,7 +26,7 @@
     </div>
     <div class="menu-cont">
       <i class="fa-sharp fa-solid fa-bars"></i>
-      <a href="/index.html"><img src="images/logo.png" alt="Logo Concert Music Catholic" class="logo"></a>
+      <a href="index.html"><img src="images/logo.png" alt="Logo Concert Music Catholic" class="logo"></a>
       <nav class="nav-menu">
         <ul class="menu-dk">
           <li><a class="menu-link" href="about.html">About</a></li>
@@ -92,66 +92,6 @@
         <div class="signers-container">
           <h2 class="singer-tittle">Featured Singers</h2>          
           <div class="singers-cards">
-            <!-- card 1 -->
-            <!-- <div class="card-singer">
-              <img src="images/sing-celines.png" alt="Photo of the Singer" class="singer">
-              <div class="singer-description">
-                <h3>Celines Diaz</h3>                
-                <p class="fetures"></p>
-                <hr class="small-gray">
-                <p class="singer-experience"></p>
-              </div>
-            </div> -->
-            <!-- card 2 -->
-            <!-- <div class="card-singer">
-              <img src="images/sing-celines.png" alt="Photo of the Singer" class="singer">
-              <div class="singer-description">
-                <h3>Celines Diaz</h3>
-                <p class="fetures">She was born on December 31, in the city of Santo Domingo</p>
-                <hr class="small-gray">
-                <p class="singer-experience">In 2001, she signed a recording contract with BMG US Latin, in the city of Miami, and recorded her first album as a singer-songwriter, entitled "Seliné".</p>
-              </div>
-            </div> -->
-            <!-- card 3 -->
-            <!-- <div class="card-singer">
-              <img src="images/sing-celines.png" alt="Photo of the Singer" class="singer">
-              <div class="singer-description">
-                <h3>Celines Diaz</h3>
-                <p class="fetures">She was born on December 31, in the city of Santo Domingo</p>
-                <hr class="small-gray">
-                <p class="singer-experience">In 2001, she signed a recording contract with BMG US Latin, in the city of Miami, and recorded her first album as a singer-songwriter, entitled "Seliné".</p>
-              </div>
-            </div> -->
-            <!-- card 4 -->
-            <!-- <div class="card-singer">
-              <img src="images/sing-celines.png" alt="Photo of the Singer" class="singer">
-              <div class="singer-description">
-                <h3>Celines Diaz</h3>
-                <p class="fetures">She was born on December 31, in the city of Santo Domingo</p>
-                <hr class="small-gray">
-                <p class="singer-experience">In 2001, she signed a recording contract with BMG US Latin, in the city of Miami, and recorded her first album as a singer-songwriter, entitled "Seliné".</p>
-              </div>
-            </div> -->
-            <!-- card 5 -->
-            <!-- <div class="card-singer">
-              <img src="images/sing-celines.png" alt="Photo of the Singer" class="singer">
-              <div class="singer-description">
-                <h3>Celines Diaz</h3>
-                <p class="fetures">She was born on December 31, in the city of Santo Domingo</p>
-                <hr class="small-gray">
-                <p class="singer-experience">In 2001, she signed a recording contract with BMG US Latin, in the city of Miami, and recorded her first album as a singer-songwriter, entitled "Seliné".</p>
-              </div>
-            </div> -->
-            <!-- card 6 -->
-            <!-- <div class="card-singer">
-              <img src="images/sing-celines.png" alt="Photo of the Singer" class="singer">
-              <div class="singer-description">
-                <h3>Celines Diaz</h3>
-                <p class="fetures">She was born on December 31, in the city of Santo Domingo</p>
-                <hr class="small-gray">
-                <p class="singer-experience">In 2001, she signed a recording contract with BMG US Latin, in the city of Miami, and recorded her first album as a singer-songwriter, entitled "Seliné".</p>
-              </div>
-            </div> -->
           </div>
         </div>        
       </section>      
@@ -161,11 +101,11 @@
         <h2>Partner</h2>
         <hr class="small-line">
         <div class="logos">
-          <a href="#"><img class="logo-partner" src="images/log-moz.png" alt="Mozilla Logo"></a>
-          <a href="#"><img class="logo-partner" src="images/log-google.png" alt="Google Logo"></a>
-          <a href="#"><img class="logo-partner" src="images/log-naver.png" alt="Naver Logo"></a>
-          <a href="#"><img class="logo-partner" src="images/log-daum.png" alt="Daumkakao Logo"></a>
-          <a href="#"><img class="logo-partner" src="images/log-airbnb.png" alt="Airbnb Logo"></a>          
+          <a href="https://www.mozilla.org/es-ES/firefox/new/"><img class="logo-partner" src="images/log-moz.png" alt="Mozilla Logo"></a>
+          <a href="https://www.google.com/"><img class="logo-partner" src="images/log-google.png" alt="Google Logo"></a>
+          <a href="https://www.naver.com/"><img class="logo-partner" src="images/log-naver.png" alt="Naver Logo"></a>
+          <a href="https://www.kakaocorp.com/page/"><img class="logo-partner" src="images/log-daum.png" alt="Daumkakao Logo"></a>
+          <a href="https://www.airbnb.com/"><img class="logo-partner" src="images/log-airbnb.png" alt="Airbnb Logo"></a>          
         </div>
       </div>
       <div class="copyright">
