--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="03/23/2023 - This is a Catholic Music Concert to be ready for 2023 in Rome city of Italy in July month.">
+  <meta name="keyword" content="Catholic, Music, Meet, Cristian">
   <title>Catholic Music Concert - United by the same Faith</title>
   <link href="https://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
