--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
   <div class="page">
     <section class="principal">
       <div class="tittle">
-        <h2 class="txt-tit-about">"United by the same Faith"</h2>
+        <!-- <h2 class="txt-tit-about">"United by the same Faith"</h2> -->
         <h1 class="h1-about">CATHOLIC MUSIC CONCERT<br>WORLD TOUR July 2023</h1>
         <p class="desc-about">A musical meeting of prayer and adoration with the best exponents of Catholic music. Three nights full of blessings, accompanied by teachings that will help us grow in our Faith.</p>
         <div class="desc-email">
@@ -52,7 +52,7 @@
     </section>
     <section class="logo">
       <div class="logo-container">
-        <h2 class="tit-about">CATHOLIC MUSIC CONCERT<br>WORLD TOUR July 2023</h2>
+        <h2 class="tit-about">Catholic Music Concert World Tour july 2023</h2>
         <hr class="small-line">
         <p class="logo-desc">The logo of CMC World Tour 2023 was decided trough the logo competition from 20.October to 22.September.</p>
         <img class="logo-big" src="images/logo-big.png" alt="Logo CMC 2023">
@@ -82,10 +82,13 @@
         </div>
       </div>
       <div class="copyright">
-        <img src="images/logo-sinodo.png" alt="Logo">
+        <div class="cop-row">        
+          <img class="cop-img" src="images/logo-sinodo.png" alt="Logo">
+        </div>
         <div class="cop-desc">
-          <p class="cop-text">2023 - Synod 21-24<br>Concert Music Catholic</p>
-          <p class="cop-text">Some Rights Reserved</p>
+          <p class="cop-text">2023 - Synod 21-24 Concert Music Catholic.</p>
+          <p class="cop-text">Some Rights Reserved @Copyright.</p>
+        </div>
         </div>
       </div>
     </footer>
