--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <script src="https://kit.fontawesome.com/3848942bcd.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>  
   <header>
     <div class="mylinks">
@@ -46,11 +45,11 @@
       <section class="principal">
       <div class="tittle">
         <h2 class="txt-tittle">"United by the same Faith"</h2>
-        <h1 >CATHOLIC MUSIC CONCERT<br>WORLD TOUR July 2023</h1>
-        <p class="description">In july, a series of presentations will be held in Rome, Italy, to praise and give glory to our Lord Jesus Christ, accompanied by the best representatives of catholic music.</p>
+        <h1 >CATHOLIC MUSIC CONCERT<br>WORLD TOUR <br>July 2023</h1>
+        <p class="description">In july, a series of presentations will be held in Rome, Italy, to praise and give glory to our Lord Jesus Christ.</p>
         <div class="date-site">
           <p class="date">2023.07.20(THU) ~ 22(SAT)</p>
-          <p class="site">@Auditorio Parco della Musica - Roma RM, Italia</p>
+          <p class="site">@ Auditorio Parco della Musica <br> Roma RM, Italia</p>
         </div>        
       </div>
       </section>
@@ -95,6 +94,9 @@
           <h2 class="singer-tittle">Featured Singers</h2>          
           <div class="singers-cards">
           </div>
+          <div class="btn-cont to-show">
+            <button class="btn-more">MORE <span></i><i class="fa-solid fa-chevron-down"></i></span></button>
+          </div>
         </div>        
       </section>      
     </main>
@@ -111,7 +113,9 @@
         </div>
       </div>
       <div class="copyright">
-        <img src="images/logo-sinodo.png" alt="Logo">
+        <div class="cop-img">
+          <img class="synod" src="images/logo-sinodo.png" alt="Logo">
+        </div>        
         <div class="cop-desc">
           <p class="cop-text">2023 - Synod 21-24 - Concert Music Catholic</p>
           <p class="cop-text">We recall that the purpose of the Synod is not to produce documents, but to plant dreams, draw forth prophecies and visions</p>
